--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -2,7 +2,14 @@
 \usepackage[all]{foreign} % \eg, \ie, \etc
 \usepackage[inline]{enumitem} % better lists
 \usepackage{stmaryrd,cmll} % linear logic symbols
+\usepackage{mdframed} % frames
 \usepackage{mathpartir} % inference rules
 \let\:\undefined % amsmath conflicts with namespc
 \usepackage{namespc} % namespacing
 \usepackage{xcolor} % colour
+\newcommand{\header}[2][]{%
+  \textbf{#2.}\hfill
+  \if\relax\detokenize{#1}\relax
+  \else
+  \framebox{#1}
+  \fi}
