--- a/doc/preamble/pgv.tex
+++ b/doc/preamble/pgv.tex
@@ -3,32 +3,35 @@
   \providecommand{\tm}[1]{\ensuremath{{\color[HTML]{a40038}#1}}}
   \providecommand{\ty}[1]{\ensuremath{{\color[HTML]{00007a}#1}}}
   \providecommand{\cs}[1]{\ensuremath{{\color[HTML]{009180}#1}}}
+  \providecommand{\conf}[1]{\mathcal{#1}}
   % Types
   \providecommand{\tmty}[2]{\ensuremath{\tm{#1}:\ty{#2}}}
   \providecommand{\emptyenv}{\varnothing}
   \providecommand{\tyunit}[0]{\ensuremath{\mathbf{1}}}
   \providecommand{\tyvoid}[0]{\ensuremath{\mathbf{0}}}
-  \providecommand{\typrod}[2]{\ensuremath{{#1}\mathbin{\times}{#2}}}
-  \providecommand{\tysum}[2]{\ensuremath{{#1}\mathbin{+}{#2}}}
-  \providecommand{\tylolli}[3][]{\ensuremath{{#2}\mathbin{\multimap^{#1}}{#3}}}
+  \providecommand{\typrod}[2]{\ensuremath{#1\times#2}}
+  \providecommand{\tysum}[2]{\ensuremath{#1+#2}}
+  \providecommand{\tylolli}[4]{\ensuremath{#3\multimap_{\cs{#1}}^{\cs{#2}}#4}}
   \providecommand{\co}[1]{\ensuremath{\overline{#1}}}
   % Session types
-  \providecommand{\tysend}[3][]{\ensuremath{!^{#1}{#2}.{#3}}}
-  \providecommand{\tyrecv}[3][]{\ensuremath{?^{#1}{#2}.{#3}}}
-  \providecommand{\tyends}[1][]{\ensuremath{\mathbf{end}_{!}^{#1}}}
-  \providecommand{\tyendr}[1][]{\ensuremath{\mathbf{end}_{?}^{#1}}}
-  \providecommand{\tyselect}[3][]{\ensuremath{{#2}\mathbin{\oplus^{#1}}{#3}}}
-  \providecommand{\tyoffer}[3][]{\ensuremath{{#2}\mathbin{\with^{#1}}{#3}}}
+  \providecommand{\tysend}[3][]{\ensuremath{!^{\cs{#1}}{#2}.{#3}}}
+  \providecommand{\tyrecv}[3][]{\ensuremath{?^{\cs{#1}}{#2}.{#3}}}
+  \providecommand{\tyend}[1][]{\ensuremath{\mathbf{end}^{\cs{#1}}}}
+  \providecommand{\tyends}[1][]{\ensuremath{\mathbf{end}_{!}^{\cs{#1}}}}
+  \providecommand{\tyendr}[1][]{\ensuremath{\mathbf{end}_{?}^{\cs{#1}}}}
+  \providecommand{\tyselect}[3][]{\ensuremath{{#2}\mathbin{\oplus^{\cs{#1}}}{#3}}}
+  \providecommand{\tyoffer}[3][]{\ensuremath{{#2}\mathbin{\with^{\cs{#1}}}{#3}}}
   \providecommand{\tyselectemp}[1][]{\ensuremath{{\oplus}^{#1}\{\}}}
   \providecommand{\tyofferemp}[1][]{\ensuremath{{\with}^{#1}\{\}}}
   % Priorities
   \providecommand{\pr}[0]{\operatorname{pr}}
-  \providecommand{\minpr}[0]{\ensuremath{\text{min}_{\pr}}}
-  \providecommand{\maxpr}[0]{\ensuremath{\text{max}_{\pr}}}
-  \providecommand{\pbot}[0]{\ensuremath{\cs{\bot\!}}}
-  \providecommand{\ptop}[0]{\ensuremath{\cs{\top\!}}}
   % Terms
-  \providecommand{\subst}[4][]{\ifstrempty{#1}{\ensuremath{#2\{#3/#4\}}}{\ensuremath{#2(\{#3/#4\}\cup#1)}}}
+  \providecommand{\subst}[4][]{%
+    \if\relax\detokenize{#1}\relax
+    \ensuremath{#2\{#3/#4\}}
+    \else
+    \ensuremath{#2(\{#3/#4\}\cup#1)}
+    \fi}
   \providecommand{\hole}[0]{\ensuremath{\square}}
   \providecommand{\plug}[2]{\ensuremath{#1[#2]}}
   \providecommand{\andthen}[2]{\ensuremath{#1;#2}}
@@ -55,22 +58,6 @@
   \providecommand{\select}[1]{\ensuremath{\mathbf{select}\;#1}}
   \providecommand{\offer}[5]{\ensuremath{\mathbf{offer}\;#1\;\{\inl{#2}\mapsto{#3};\inr{#4}\mapsto{#5}\}}}
   \providecommand{\offeremp}[1]{\ensuremath{\mathbf{offer}\;#1\;\{\}}}
-  % Configurations
-  \providecommand{\ppar}[2]{\ensuremath{#1\parallel#2}}
-  \providecommand{\res}[3]{\ensuremath{(\nu#1#2)#3}}
-  % Flags
-  \providecommand{\main}[0]{\ensuremath{\bullet}}
-  \providecommand{\child}[0]{\ensuremath{\circ}}
-  % Typing judgements
-  \providecommand{\tseq}[4][]{\ensuremath{#2\vdash^{#1}\tmty{#3}{#4}}}
-  \providecommand{\cseq}[3][]{\ensuremath{#2\vdash^{#1}\tm{#3}}}
-  % Reduction relations
-  \providecommand{\tred}[0]{\ensuremath{\longrightarrow_{M}}}
-  \providecommand{\cred}[0]{\ensuremath{\longrightarrow_{\conf{C}}}}
-  % Cyclic Scheduler
-  \newcommand{\sched}{\ensuremath{\mathbf{sched}}}
-  \newcommand{\agent}[1]{\ensuremath{\mathbf{agent}_{#1}}}
-  \newcommand{\proc}[1]{\ensuremath{\mathbf{proc}_{#1}}}
-  \newcommand{\echo}[0]{\ensuremath{\mathbf{echo}}}
+  \providecommand{\seq}[5]{\ensuremath{#3\vdash_{\cs{#1}}^{\cs{#2}}\tmty{#4}{#5}}}
 }{}
 \newcommand{\pgv}[1]{\namespace*{pgv}{}{#1}}
