--- a/doc/fig/sesh-typing.tex
+++ b/doc/fig/sesh-typing.tex
@@ -4,7 +4,7 @@
     \begin{mathpar}
       \tmty{\retn}{\tylolli{T}{\mon{\pr(\ty{T})}{\bot}{T}}}
 
-      \tmty{\bind}{\withconstraint{(\cs{q}<\cs{p})}{\tylolli{\mon{p}{q}{T}}{\tylolli{(\tylolli{T}{\mon{p'}{q'}{U}})}{\mon{{p}\sqcap{p'}}{{q}\sqcup{q'}}{U}}}}}
+      \tmty{\bind}{\withconstraint{(\cs{q}<\cs{p'})}{\tylolli{\mon{p}{q}{T}}{\tylolli{(\tylolli{T}{\mon{p'}{q'}{U}})}{\mon{{p}\sqcap{p'}}{{q}\sqcup{q'}}{U}}}}}
       \\
       \tmty{\new}{\tylolli{\tyunit}{\mon{\top}{\bot}{\typrod{S}{\co{S}}}}}
       
