--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -7,6 +7,8 @@
 \let\:\undefined % amsmath conflicts with namespc
 \usepackage{namespc} % namespacing
 \usepackage{xcolor} % colour
+
+% headers (for declaring operators in figures)
 \newcommand{\header}[2][]{%
   \textbf{#2.}\hfill
   \if\relax\detokenize{#1}\relax
