--- a/doc/preamble/sesh.tex
+++ b/doc/preamble/sesh.tex
@@ -3,6 +3,7 @@
   \providecommand{\tm}[1]{\ensuremath{{\color[HTML]{a40038}#1}}}
   \providecommand{\ty}[1]{\ensuremath{{\color[HTML]{00007a}#1}}}
   \providecommand{\cs}[1]{\ensuremath{{\color[HTML]{009180}#1}}}
+  \renewcommand{\Conid}[1]{\ty{\mathit{#1}}}
   % Types
   \providecommand{\tmty}[2]{\ensuremath{\tm{#1}:\ty{#2}}}
   \providecommand{\emptyenv}{\varnothing}
@@ -34,33 +35,33 @@
   \providecommand{\hole}[0]{\ensuremath{\square}}
   \providecommand{\plug}[2]{\ensuremath{#1[#2]}}
   \providecommand{\andthen}[2]{\ensuremath{#1;#2}}
-  \providecommand{\letbind}[3]{\ensuremath{\Conid{let}\;#1\mathbin{=}#2\;\Conid{in}\;#3}}
+  \providecommand{\letbind}[3]{\ensuremath{\Varid{let}\;#1\mathbin{=}#2\;\Varid{in}\;#3}}
   \providecommand{\pair}[2]{\ensuremath{(#1,#2)}}
   \providecommand{\letpair}[4]{\ensuremath{\letbind{\pair{#1}{#2}}{#3}{#4}}}
-  \providecommand{\labinl}[0]{\ensuremath{\Conid{Left}}}
-  \providecommand{\labinr}[0]{\ensuremath{\Conid{Right}}}
+  \providecommand{\labinl}[0]{\ensuremath{\Varid{Left}}}
+  \providecommand{\labinr}[0]{\ensuremath{\Varid{Right}}}
   \providecommand{\inl}[1]{\ensuremath{\labinl\;#1}}
   \providecommand{\inr}[1]{\ensuremath{\labinr\;#1}}
-  \providecommand{\casesum}[5]{\ensuremath{\Conid{case}\;#1\left\{\inl{#2}\mapsto{#3};\;\inr{#4}\mapsto{#5}\right\}}}
+  \providecommand{\casesum}[5]{\ensuremath{\Varid{case}\;#1\left\{\inl{#2}\mapsto{#3};\;\inr{#4}\mapsto{#5}\right\}}}
   \providecommand{\unit}[0]{\ensuremath{()}}
   \providecommand{\letunit}[2]{\ensuremath{\letbind{\unit}{#1}{#2}}}
-  \providecommand{\absurd}[1]{\ensuremath{\Conid{absurd}\;#1}}
-  \providecommand{\link}[0]{\Conid{link}}
-  \providecommand{\new}[0]{\Conid{new}}
-  \providecommand{\halt}[0]{\Conid{halt}}
-  \providecommand{\retn}[0]{\Conid{return}}
-  \providecommand{\bind}[0]{\Conid{>>=}}
-  \providecommand{\spawn}[0]{\Conid{spawn}}
-  \providecommand{\send}[0]{\Conid{send}}
-  \providecommand{\recv}[0]{\Conid{recv}}
-  \providecommand{\fork}[0]{\Conid{fork}}
-  \providecommand{\wait}[0]{\Conid{wait}}
-  \providecommand{\close}[0]{\Conid{close}}
-  \providecommand{\select}[1]{\ensuremath{\Conid{select}\;#1}}
-  \providecommand{\offer}[5]{\ensuremath{\Conid{offer}\;#1\;\{\inl{#2}\mapsto{#3};\inr{#4}\mapsto{#5}\}}}
-  \providecommand{\offeremp}[1]{\ensuremath{\Conid{offer}\;#1\;\{\}}}
+  \providecommand{\absurd}[1]{\ensuremath{\Varid{absurd}\;#1}}
+  \providecommand{\link}[0]{\Varid{link}}
+  \providecommand{\new}[0]{\Varid{new}}
+  \providecommand{\halt}[0]{\Varid{halt}}
+  \providecommand{\retn}[0]{\Varid{return}}
+  \providecommand{\bind}[0]{\Varid{>>=}}
+  \providecommand{\spawn}[0]{\Varid{spawn}}
+  \providecommand{\send}[0]{\Varid{send}}
+  \providecommand{\recv}[0]{\Varid{recv}}
+  \providecommand{\fork}[0]{\Varid{fork}}
+  \providecommand{\wait}[0]{\Varid{wait}}
+  \providecommand{\close}[0]{\Varid{close}}
+  \providecommand{\select}[1]{\ensuremath{\Varid{select}\;#1}}
+  \providecommand{\offer}[5]{\ensuremath{\Varid{offer}\;#1\;\{\inl{#2}\mapsto{#3};\inr{#4}\mapsto{#5}\}}}
+  \providecommand{\offeremp}[1]{\ensuremath{\Varid{offer}\;#1\;\{\}}}
   \providecommand{\withconstraint}[2]{#1\Rightarrow#2}
-  \providecommand{\mon}[3]{\ensuremath{\mathcal{M}_{\cs{#1}}^{\cs{#2}}\;{#3}}}
+  \providecommand{\mon}[3]{\ensuremath{\Conid{Sesh}_{\cs{#1}}^{\cs{#2}}\;{#3}}}
   \providecommand{\seq}[3]{\ensuremath{#1\vdash\tmty{#2}{#3}}}
 }{}
 \newcommand{\sesh}[1]{\namespace*{sesh}{}{#1}}
