Formatter for linear lambdas.

--- a/doc/fig/pgv-typing.tex
+++ b/doc/fig/pgv-typing.tex
@@ -35,7 +35,7 @@
         \seq{p'}{q'}{\ty{\Delta}}{N}{T}
         \and
         \cs{q}<\cs{p'}
-      }{\seq{{p}\sqcap{p'}}{{q}\sqcup{q'}}{\ty{\Gamma},\ty{\Delta}}{\andthen{M}{N}}{T}}
+      }{\seq{{p}\sqcap{p'}}{{q}\sqcup{q'}}{\ty{\Gamma},\ty{\Delta}}{\letunit{M}{N}}{T}}
       
       \inferrule*[lab=T-Pair]{
         \seq{p}{q}{\ty{\Gamma}}{M}{T}
