Put more code in the paper!

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -31,3 +31,6 @@
 \newcommand{\tmty}[2]{\ensuremath{\tm{#1}:\ty{#2}}}
 \newcommand{\emptyenv}{\varnothing}
 \newcommand{\conf}[1]{\mathcal{#1}}
+
+% haskell macros
+\newcommand{\fmap}[0]{\mathbin{\langle\$\rangle}}
