Added more code! More code!

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -31,6 +31,7 @@
 \newcommand{\tmty}[2]{\ensuremath{\tm{#1}:\ty{#2}}}
 \newcommand{\emptyenv}{\varnothing}
 \newcommand{\conf}[1]{\mathcal{#1}}
+\newcommand{\ibind}{\mathbin{>\!\!\!>\!\!\!>\mkern-6.7mu=}}
 
 % haskell macros
 \newcommand{\fmap}[0]{\mathbin{\langle\$\rangle}}
