--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -25,9 +25,9 @@
   \llbracket#1\rrbracket}
 
 % sort macros
-\newcommand{\tm}[1]{\ensuremath{{\color[HTML]{a40038}#1}}}
-\newcommand{\ty}[1]{\ensuremath{{\color[HTML]{00007a}#1}}}
-\newcommand{\cs}[1]{\ensuremath{{\color[HTML]{009180}#1}}}
+\newcommand{\tm}[1]{{\color[HTML]{a40038}#1}}
+\newcommand{\ty}[1]{{\color[HTML]{00007a}#1}}
+\newcommand{\cs}[1]{{\color[HTML]{009180}#1}}
 \newcommand{\tmty}[2]{\ensuremath{\tm{#1}:\ty{#2}}}
 \newcommand{\emptyenv}{\varnothing}
 \newcommand{\conf}[1]{\mathcal{#1}}
@@ -35,3 +35,9 @@
 
 % haskell macros
 \newcommand{\fmap}[0]{\mathbin{\langle\$\rangle}}
+
+% references
+\usepackage{varioref}
+\usepackage{hyperref}
+\usepackage{cleveref}
+\usepackage{doi}
