--- a/doc/preamble/pgv.tex
+++ b/doc/preamble/pgv.tex
@@ -48,6 +48,7 @@
   \providecommand{\fork}[0]{\ensuremath{\mathbf{fork}}}
   \providecommand{\wait}[0]{\ensuremath{\mathbf{wait}}}
   \providecommand{\close}[0]{\ensuremath{\mathbf{close}}}
+  \providecommand{\cancel}[0]{\ensuremath{\mathbf{cancel}}}
   \providecommand{\select}[1]{\ensuremath{\mathbf{select}\;#1}}
   \providecommand{\offer}[5]{\ensuremath{\mathbf{offer}\;#1\;\{\inl{#2}\mapsto{#3};\inr{#4}\mapsto{#5}\}}}
   \providecommand{\offeremp}[1]{\ensuremath{\mathbf{offer}\;#1\;\{\}}}
