Setup bibtex; wrote on sec 2; added file for sec 1.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -1,6 +1,6 @@
-@preamble{ " \newcommand{\noop}[1]{} " }
+Gpreamble{ " \newcommand{\noop}[1]{} " }
 
-@article{LindleyM16,
+@article{lindleymorris16,
   author     = {Lindley, Sam and Morris, J. Garrett},
   title      = {Embedding Session Types in Haskell},
   year       = {2016},
@@ -20,13 +20,13 @@
   keywords   = {session types, embedded languages, linear types}
 }
 
-@unpublished{KokkeD21,
+@unpublished{kokkedardha21,
   author     = "Wen Kokke and Ornela Dardha",
   title      = "Prioritise the Best Variation",
   note       = "Manuscript submitted for publication",
 }
 
-@article{Kokke19,
+@article{kokke19,
   abstract   = {Rusty Variation (RV) is a library for session-typed communication
                   in Rust which offers strong compile-time correctness
                   guarantees. Programs written using RV are guaranteed to
@@ -44,4 +44,48 @@
   url        = {https://wen.works/public/pubs/eptcs2019b.pdf},
   doi        = {10.4204/eptcs.304.4},
   note       = {Renamed to Sesh},
+}
+
+@inproceedings{peytonjonesgordon96,
+  author     = {Simon L. {Peyton Jones} and
+               Andrew D. Gordon and
+               Sigbj{\o}rn Finne},
+  editor     = {Hans{-}Juergen Boehm and
+               Guy L. Steele Jr.},
+  title      = {Concurrent Haskell},
+  booktitle  = {Conference Record of POPL'96: The 23rd {ACM} {SIGPLAN-SIGACT} Symposium
+               on Principles of Programming Languages, Papers Presented at the Symposium,
+               St. Petersburg Beach, Florida, USA, January 21-24, 1996},
+  pages      = {295--308},
+  publisher  = {{ACM} Press},
+  year       = {1996},
+  url        = {https://doi.org/10.1145/237721.237794},
+  doi        = {10.1145/237721.237794},
+  timestamp  = {Tue, 25 Jun 2019 09:29:17 +0200},
+  biburl     = {https://dblp.org/rec/conf/popl/JonesGF96.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{dardhagiachino12,
+  author     = {Dardha, Ornela and Giachino, Elena and Sangiorgi, Davide},
+  publisher  = {ACM},
+  booktitle  = {Proc.\ of {PPDP}},
+  year       = 2012,
+  pages      = {139--150},
+  title      = {Session types revisited},
+}
+
+@article{bernardyboespflug18,
+  doi        = {10.1145/3158093},
+  url        = {https://doi.org/10.1145/3158093},
+  year       = {2018},
+  month      = jan,
+  publisher  = {Association for Computing Machinery ({ACM})},
+  volume     = {2},
+  number     = {{POPL}},
+  pages      = {1--29},
+  author     = {Jean-Philippe Bernardy and Mathieu Boespflug and Ryan R. Newton and Simon Peyton Jones and Arnaud Spiwack},
+  title      = {Linear Haskell: practical linearity in a higher-order polymorphic language},
+  journal    = {Proceedings of the {ACM} on Programming Languages}
 }
