--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -1,6 +1,7 @@
 \usepackage[english]{babel} % better typography
 \usepackage[all]{foreign} % \eg, \ie, \etc
 \usepackage[inline]{enumitem} % better lists
+\usepackage[htt]{hyphenat} % hyphenate texttt
 \usepackage{stmaryrd,cmll} % linear logic symbols
 \usepackage{mdframed} % frames
 \usepackage{mathpartir} % inference rules
