Renamed PGV spawn to fork.

--- a/doc/preamble/pgv.tex
+++ b/doc/preamble/pgv.tex
@@ -42,7 +42,7 @@
   \providecommand{\link}[0]{\ensuremath{\mathbf{link}}}
   \providecommand{\new}[0]{\ensuremath{\mathbf{new}}}
   \providecommand{\halt}[0]{\ensuremath{\mathbf{halt}}}
-  \providecommand{\spawn}[0]{\ensuremath{\mathbf{spawn}}}
+  \providecommand{\spawn}[0]{\ensuremath{\mathbf{fork}}}
   \providecommand{\send}[0]{\ensuremath{\mathbf{send}}}
   \providecommand{\recv}[0]{\ensuremath{\mathbf{recv}}}
   \providecommand{\fork}[0]{\ensuremath{\mathbf{fork}}}
