--- a/doc/main.bib
+++ b/doc/main.bib
@@ -1,12 +1,12 @@
 @inproceedings{padovaninovara15,
-  author       = {Padovani, Luca and Novara, Luca},
-  publisher    = {Springer},
-  booktitle    = {Proc.\ of {FORTE}},
-  year         = 2015,
-  pages        = {3--18},
-  series       = {LNCS},
-  title        = {{Types for Deadlock-Free Higher-Order Programs}},
-  volume       = 9039,
+  author      = {Padovani, Luca and Novara, Luca},
+  publisher   = {Springer},
+  booktitle   = {Proc.\ of {FORTE}},
+  year        = 2015,
+  pages       = {3--18},
+  series      = {LNCS},
+  title       = {{Types for Deadlock-Free Higher-Order Programs}},
+  volume      = 9039,
 }
 
 @article{orchardyoshida17,
@@ -136,4 +136,15 @@
   articleno		= {28},
   numpages		= {29},
   keywords		= {web programming, session types, exceptions, asynchrony}
+}
+
+@inproceedings{polakow15,
+  doi					= {10.1145/2804302.2804309},
+  url					= {https://doi.org/10.1145/2804302.2804309},
+  year				= {2015},
+  month				= aug,
+  publisher		= {{ACM}},
+  author			= {Jeff Polakow},
+  title				= {Embedding a full linear Lambda calculus in Haskell},
+  booktitle		= {Proceedings of the 2015 {ACM} {SIGPLAN} Symposium on Haskell}
 }
