Moved conclusion to its own file, rewrote 'session types in haskell'.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -1,21 +1,21 @@
 @inproceedings{padovaninovara15,
-  author      = {Padovani, Luca and Novara, Luca},
-  publisher   = {Springer},
-  booktitle   = {Proc.\ of {FORTE}},
-  year        = 2015,
-  pages       = {3--18},
-  series      = {LNCS},
-  title       = {{Types for Deadlock-Free Higher-Order Programs}},
-  volume      = 9039,
+  author    = {Padovani, Luca and Novara, Luca},
+  publisher = {Springer},
+  booktitle = {Proc.\ of {FORTE}},
+  year      = 2015,
+  pages     = {3--18},
+  series    = {LNCS},
+  title     = {{Types for Deadlock-Free Higher-Order Programs}},
+  volume    = 9039,
 }
 
 @article{orchardyoshida17,
-  title				= {Session types with linearity in Haskell},
-  author			= {Orchard, Dominic and Yoshida, Nobuko},
-  journal			= {Behavioural Types: from Theory to Tools},
-  pages				= {219},
-  year				= {2017},
-  publisher		= {River Publishers}
+  title			= {Session types with linearity in Haskell},
+  author		= {Orchard, Dominic and Yoshida, Nobuko},
+  journal		= {Behavioural Types: from Theory to Tools},
+  pages			= {219},
+  year			= {2017},
+  publisher	= {River Publishers}
 }
 
 @inproceedings{orchardyoshida16,
@@ -30,13 +30,13 @@
  }
 
 @inproceedings{pucellatov08,
-  doi					= {10.1145/1411286.1411290},
-  url					= {https://doi.org/10.1145/1411286.1411290},
-  year				= {2008},
-  publisher		= {{ACM} },
-  author			= {Riccardo Pucella and Jesse A. Tov},
-  title				= {Haskell session types with (almost) no class},
-  booktitle		= {Proc.\ of Haskell}
+  doi				= {10.1145/1411286.1411290},
+  url				= {https://doi.org/10.1145/1411286.1411290},
+  year			= {2008},
+  publisher	= {{ACM} },
+  author		= {Riccardo Pucella and Jesse A. Tov},
+  title			= {Haskell session types with (almost) no class},
+  booktitle	= {Proc.\ of Haskell}
 }
 
 
@@ -52,80 +52,80 @@
 }
 
 @unpublished{kokkedardha21,
-  author			= "Wen Kokke and Ornela Dardha",
-  title				= "Prioritise the Best Variation",
+  author		= "Wen Kokke and Ornela Dardha",
+  title			= "Prioritise the Best Variation",
   note			= "Manuscript submitted for publication",
 }
 
 @article{kokke19,
-   title			= {{Rusty Variation}: Deadlock-free Sessions with Failure in {Rust}},
-  author			= {Wen Kokke},
-  journal			= {{EPTCS}},
-  volume			= {304},
+   title		= {{Rusty Variation}: Deadlock-free Sessions with Failure in {Rust}},
+  author		= {Wen Kokke},
+  journal		= {{EPTCS}},
+  volume		= {304},
   issn			= {2075-2180},
-  publisher		= {Open Publishing Association},
-  year				= {2019},
-  month				= sep,
-  pages				= {48–60},
-  url					= {https://wen.works/public/pubs/eptcs2019b.pdf},
-  doi					= {10.4204/eptcs.304.4},
-  note				= {Renamed to Sesh},
+  publisher	= {Open Publishing Association},
+  year			= {2019},
+  month			= sep,
+  pages			= {48–60},
+  url				= {https://wen.works/public/pubs/eptcs2019b.pdf},
+  doi				= {10.4204/eptcs.304.4},
+  note			= {Renamed to Sesh},
 }
 
 @inproceedings{peytonjonesgordon96,
   author		= {Simon L. {Peyton Jones} and Andrew D. Gordon and Sigbj{\o}rn Finne},
   title			= {Concurrent Haskell},
-  booktitle		= {Proc.\ of {POPL}},
-  pages		= {295--308},
+  booktitle	= {Proc.\ of {POPL}},
+  pages     = {295--308},
   publisher	= {{ACM}},
-  yea			= {1996},
-  doi			= {10.1145/237721.237794}
+  yea       = {1996},
+  doi       = {10.1145/237721.237794}
 }
 
 
 @inproceedings{dardhagiachino12,
-  author			= {Dardha, Ornela and Giachino, Elena and Sangiorgi, Davide},
-  publisher		= {ACM},
-  booktitle			= {Proc.\ of {PPDP}},
-  publisher		= {ACM},
+  author		= {Dardha, Ornela and Giachino, Elena and Sangiorgi, Davide},
+  publisher	= {ACM},
+  booktitle	= {Proc.\ of {PPDP}},
+  publisher	= {ACM},
   year			= 2012,
   pages			= {139--150},
-  title				= {Session types revisited},
+  title			= {Session types revisited},
 }
 
 @article{bernardyboespflug18,
   doi				= {10.1145/3158093},
   year			= {2018},
-  publisher		= {ACM},
-  volume			= {2},
-  journal			= {Proc.\ of {POPL}},
+  publisher	= {ACM},
+  volume		= {2},
+  journal		= {Proc.\ of {POPL}},
   pages			= {1--29},
-  author			= {Jean-Philippe Bernardy and Mathieu Boespflug and Ryan R. Newton and Simon Peyton Jones and Arnaud Spiwack},
-  title				= {Linear Haskell: practical linearity in a higher-order polymorphic language}
+  author		= {Jean-Philippe Bernardy and Mathieu Boespflug and Ryan R. Newton and Simon Peyton Jones and Arnaud Spiwack},
+  title			= {Linear Haskell: practical linearity in a higher-order polymorphic language}
  }
 
 @article{fowlerlindley19,
-  author			= {Fowler, Simon and Lindley, Sam and Morris, J. Garrett and Decova, S\'{a}ra},
-  title				= {Exceptional Asynchronous Session Types: Session Types without Tiers},
+  author		= {Fowler, Simon and Lindley, Sam and Morris, J. Garrett and Decova, S\'{a}ra},
+  title			= {Exceptional Asynchronous Session Types: Session Types without Tiers},
   year			= {2019},
-  publisher		= {ACM},
-  address			= {New York, NY, USA},
-  volume			= {3},
+  publisher	= {ACM},
+  address		= {New York, NY, USA},
+  volume		= {3},
   doi				= {10.1145/3290341},
-  journal			= {Proc.\ of POPL},
-  articleno			= {28},
-  numpages		= {29}
+  journal		= {Proc.\ of POPL},
+  articleno	= {28},
+  numpages	= {29}
  }
 
 @inproceedings{polakow15,
-  doi					= {10.1145/2804302.2804309},
-  url					= {https://doi.org/10.1145/2804302.2804309},
-  year				= {2015},
-  month				= aug,
-  publisher		= {{ACM}},
-  author			= {Jeff Polakow},
-  title				= {Embedding a full linear Lambda calculus in Haskell},
-  booktitle		= {Proc/ of the Symposium on Haskell}
+  doi				= {10.1145/2804302.2804309},
+  url				= {https://doi.org/10.1145/2804302.2804309},
+  year			= {2015},
+  month			= aug,
+  publisher	= {{ACM}},
+  author		= {Jeff Polakow},
+  title			= {Embedding a full linear Lambda calculus in Haskell},
+  booktitle	= {Proc/ of the Symposium on Haskell}
 }
 
 @inproceedings{neubauerthiemann04,
@@ -141,7 +141,7 @@
   doi       = {10.1007/978-3-540-24836-1\_5}
 }
 
-@inproceedings{imai10,
+@inproceedings{imaiyuen10,
   author    = {Keigo Imai and
                Shoji Yuen and
                Kiyoshi Agusa},
@@ -154,11 +154,10 @@
   doi       = {10.4204/EPTCS.69.6}
 }
 
-@article{SackmanEisenbach08,
-author = {Sackman, Matthew and Eisenbach, Susan},
-year = {2008},
-month = {01},
-pages = {},
-title = {Session Types in Haskell Updating Message Passing for the 21st Century}
+@article{sackmaneisenbach08,
+  author    = {Sackman, Matthew and Eisenbach, Susan},
+  year      = {2008},
+  month     = {01},
+  pages     = {},
+  title     = {Session Types in Haskell Updating Message Passing for the 21st Century}
 }
-
