--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -1,5 +1,6 @@
 \usepackage[english]{babel} % better typography
 \usepackage[all]{foreign} % \eg, \ie, \etc
+\usepackage{textgreek} % \textpi, \textlambda
 \usepackage[inline]{enumitem} % better lists
 \usepackage[htt]{hyphenat} % hyphenate texttt
 \usepackage{stmaryrd,cmll} % linear logic symbols
